--- a/style.css
+++ b/style.css
@@ -25,9 +25,9 @@ header {
     
 }
 nav a.active {
-  color: #007bff; 
-  border-bottom: 2px solid #007bff;
+  color: #007bff;
   font-weight: bold;
+  text-decoration: none;
 }
 
 .logo img {
@@ -43,6 +43,37 @@ nav a {
     font-weight: bold;
 }
 
+.search-box {
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    padding: 5px 10px;
+    height: 35px;
+}
+
+.search-box input[type="text"] {
+    border: none;
+    outline: none;
+    background: transparent;
+    padding: 5px;
+    font-size: 14px;
+    width: 150px;
+    color: #333;
+}
+
+.search-box button {
+    border: none;
+    background: none;
+    cursor: pointer;
+    color: #007bff;
+    font-size: 16px;
+}
+
+.search-box i {
+    pointer-events: none;
+}
 /* Hero Section */
 .hero {
     display: flex;
@@ -223,6 +254,7 @@ nav a {
   width: 260px;
   height: 300px;
   margin-right: 30px;
+  margin-left: 90px;
 }
   
 
@@ -353,6 +385,7 @@ nav a {
 nav a:hover {
   color: #3d7eff;
 }
+
 /* RESPONSIVE SPLIT */
 @media screen and (max-width: 768px) {
   header, .hero, .about, .projects, .blogs {
@@ -656,6 +689,7 @@ body {
     font-size: 14px;
     color: #555;
   }
+
   
 /* Footer */
 footer {
