--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 5px 10%;
+    padding: 5px 5%;
     background-color: #dceeff;
     box-shadow: none; 
     margin: 10;
@@ -31,11 +31,8 @@ nav a.active {
 }
 
 .logo img {
-  width: 70px;   
-  height: auto;   
-  display: block; 
-  margin: 0 auto; 
-  margin-left: -70px;          
+  max-width: 70%;        
+  height: auto;          
 }
 
 
@@ -52,7 +49,7 @@ nav a {
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 20px;
-    padding: 5px -100px;
+    padding: 5px 10px;
     height: 35px;
 }
 
@@ -72,7 +69,6 @@ nav a {
     cursor: pointer;
     color: #007bff;
     font-size: 16px;
-    padding: 5px
 }
 
 .search-box i {
@@ -719,7 +715,7 @@ footer {
 
 .back-to-top {
   position: absolute;
-  top: 20%;
+  top: 50%;
   right: 30px;
   transform: translateY(-50%);
 }
@@ -866,7 +862,6 @@ ol li ul li {
   font-size: 16px;
   margin-bottom: 10px;
   color: #333;
-  font-weight: bold;
 }
 
 .share-buttons a {
