--- a/style.css
+++ b/style.css
@@ -141,7 +141,6 @@ nav a {
 
 /* Projects */
 .projects {
-    text-align: center;
     padding: 60px 5%;
 }
 
@@ -152,7 +151,7 @@ nav a {
 
 .project-list {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     gap: 30px;
     margin-top: 30px;
 }
