--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ nav a {
 
 .project-list {
     display: flex;
-    justify-content: left;
+    justify-content: center;
     gap: 30px;
     margin-top: 30px;
 }
